2007-05-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_surface.c:
	supported win32 surface. Thanks to Yoshinao Muramatsu!!!

	* README: added entry for Yoshinao Muramatsu.

2007-05-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_private.[ch] (rb_cairo__glyphs_to_array,
	RB_CAIRO__GLYPHS_TO_ARRAY): fixed wrong memory allocation.
	* src/rb_cairo_context.c, src/rb_cairo_scaled_font.c: used
	RB_CAIRO__GLYPHS_TO_ARRAY instead of rb_cairo__glyphs_to_array().

	* src/rb_cairo_context.c (cr_set_dash):
	- made offset optional.
	- accepted a number for dash_array.

2007-05-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_get_group_target): added NULL check.

	* src/rb_cairo_context.c (cr_get_font_face): checked status of got
	font face not context.

	* src/rb_cairo_context.c (cr_set_font_face): accepted nil as font
	face.

	* src/rb_cairo_context.c (cr_copy_path, cr_copy_path_flat):
	checked status of copied path not context.

2007-05-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c (cr_surface_create_similar): retrieved
	corresponding Ruby class by cairo_surface_get_type().

2007-05-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_path.c, src/lib/cairo.rb, src/lib/cairo/path.rb:
	added path related methods such as move_to, line_to and curve_to
	to Cairo::Path.

	* src/lib/cairo/context/path.rb
	(Cairo::Context::Path#transform_path): multi-thread safe.

2007-05-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_path.c
	(Cairo::PathData#move_to?, Cairo::PathData#line_to?,
	Cairo::PathData#curve_to?, Cairo::PathData#close_path?): added.

	* src/rb_cairo_private.h
	(CBOOL2RVAL, RVAL2CBOOL): added.
	(rb_cairo__is_kind_of): added.
	* src/*.c: used rb_cairo__is_kind_of() instead of
	RTEST(rb_obj_is_kind_of(...)).

	* src/rb_cairo_path.c
	(Cairo::Path#size, Cairo::Path#length, Cairo::Path#empty?): added.
	(Cairo::Path#[]): supported negative index.
